--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 					<li>
 						<img src="images/pin.png" class="icon" alt="location">
 					</li>
+					<li class="align-right">
+						<img src="images/burger.png" class="icon" alt="">
+					</li>
 				</ul>
 			</nav>
 		</header> 
